--- a/abstracts.qmd
+++ b/abstracts.qmd
@@ -3,6 +3,44 @@ toc: true
 toc-location: right
 ---
 
+## Cyto 2026 - Flow Awarenesss
+
+**Being Everything, Everywhere, All at Once: Open-Source Automation for Situational Awareness in SRLs**
+
+David Rach1,2, Natarajan Ayithan2, Xiaoxuan Fan2  
+
+1 Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, USA 2 Flow Cytometry Shared Resource, University of Maryland Greenebaum Comprehensive Cancer Center, Baltimore, USA 
+
+Operating a flow cytometry shared resource laboratory (SRL) is the art of daily handling issues as they arise, while staying situationally aware enough to avoid a complete meltdown. Given that time is a precious commodity, tools that can provide timely situational awareness of impending issues and thus permit a staged intervention are highly desirable. With the current fiscal environment, free and open-source software tools could assist these efforts, but need to not impose significant additional burden on the staff. 
+
+Over the last 18 months, we have sequentially designed and implemented enhanced monitoring tools for all the instruments at our core, using open-source software (R, Python and Rust). These have utilized existing computational resources (as well as computers repurposed following Windows 10 end-of-life) with automation scheduled for off-peak hours to survey for a range of issues across all acquired experiment and .fcs files. 
+
+These tools have collectively enabled us to monitor user/laboratory instrument usage over time, track cancellations and altered reservations, build a database of markers and fluorophores by users, and determine their panels respective stain indexes and unmixing-dependent spreading (UDS) hotspots. The system spot checks unmixing controls to identify multiple autofluorescences and tandem fluorophore degradation, with a similar process monitoring for debris build up in the fluidic lines. Additionally, the system reports computer storage space occupancy by user, processes the cytometer logs to classify and record the frequency of returned errors, visualizes instrument QC metrics, as well as tracks cell sorter specific metrics by nozzle. 
+
+This framework has expanded our situational awareness beyond what any individual vendor system can provide. It has allowed staff to intervene proactively—reaching out to users before substantial time, samples, and reagents are wasted—at a scale that would have seemed implausible only a few years ago. By standardizing oversight, reducing operator-dependent variability, and documenting performance trends, the system strengthens rigor and reproducibility across SRL workflows. 
+
+We emphasize the piecemeal nature of our implementation, highlight what worked well and offer lessons learned from our experience in pursuit to orchestrate situational awareness in an SRL environment. 
+
+## Cyto 2026 - Alpha Beta
+
+**A semi-supervised pipeline for a comprehensive and scalable analysis of immune heterogeneity in human samples**
+
+David Rach1,2, Nginache Nampota-Nkomba3,4, Godfrey Mvula3, Felix A. Mkandawire3, Osward M. Nyirenda3, Winter A. Okoth5,6, Daniela Franco4, Andrea G. Buchwald5, Franklin R. Toapanta5, Marcelo B. Sztein5, Miriam K. Laufer5, Kirsten E. Lyke5, Cristiana Cairo7.  
+
+1Molecular Microbiology and Immunology Graduate Program, University of Maryland School of Medicine, Baltimore, MD, United States 2Flow Cytometry Shared Resource, University of Maryland Greenebaum Comprehensive Cancer Center, Baltimore, MD, United States 3Blantyre Malaria Project, Kamuzu University of Health Sciences, Blantyre, Malawi 4Graduate Program in Life Sciences, University of Maryland School of Medicine, Baltimore, MD, United States 5Center for Vaccine Development and Global Health, University of Maryland School of Medicine, Baltimore, MD, United States 6Geographic Medicine Division, Department of Medicine, University of Maryland School of Medicine, Baltimore, MD, United States 7Department of Microbiology and Immunology, University of Maryland School of Medicine, Baltimore, MD, United States 
+
+Spectral flow cytometry (SFC) holds enormous potential for immune profiling in both breadth and depth. For studies of early life human immunology, where the quantity of biospecimen is limited, SFC may allow for a more thorough interrogation of immune responses following immunization or infection. 
+
+The increased number of fluorophores does come with increased uncertainty, affecting the estimation of marker abundance during unmixing. Factors such as additional or varied autofluorescence, non-specific binding or tandem degradation of fluorophores, and increased unmixing-dependent spread due to co-expression of markers on rare subsets, introduce uncertainty when analyzing datasets. Developing systematic bioinformatic methods to distinguish heterogeneity from underlying technical artifacts is critical to the production of interpretable, accurate data using SFC. 
+
+Additionally, analysis of complex SFC datasets remains a challenge. Manual gating of pre-determined cell populations of interest risks introducing bias by defaulting to past immunologic assumptions and by design narrows our ability to detect changes in other cell subsets. On the other hand, while existing unsupervised methods may capture a broader picture, it may be difficult to discern findings with biologic relevance. 
+
+Studying a cohort of Malawian infants with well-characterized prenatal HIV-exposure, we demonstrate a systematic method of analysis suitable for rare subsets. The cohort consisted of three groups of infants born to women with: A) ART-treated HIV infection and undetectable viral load since before conception and through pregnancy (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load at enrollment (HEU-hi); C) no HIV infection (HU). Cryopreserved cord blood mononuclear cells and longitudinal peripheral blood mononuclear cells collected at 4 and 9-months following routine childhood immunizations were thawed, rested for 6 hours, and stimulated in the presence of purified protein derivative (PPD) or Staphylococcal enterotoxin B (SEB). Cells were stained with a 32-color SFC panel to characterize phenotype, activation-induced markers and cytokine production with same day acquisition using a 5-laser Cytek Aurora. 
+
+Following acquisition, we carried out a semi-supervised analysis with a custom pipeline that we implemented in R and Rust. Briefly, we performed quality assurance of unmixing controls using the Luciernaga and PeacoQC R packages, replacing problematic single-colors and/or autofluorescence controls as appropriate before unmixing. Samples were biexponentially transformed and automated gating was implemented using the openCyto and flowMagic R packages. Using the interactive Shiny App in our R package Coereba, the calculated split-points between positive and negative events were visualized for each marker and manually adjusted as needed. Identity columns for the marker expression of individual cells were then generated and appended to the .fcs files. 
+
+For select cell populations, all events were concatenated, normalized with CytoNorm v2, clustered with flowSOM, and visualized with PaCMAP. Identity data associated with cells across clusters was retrieved, allowing a comparison between algorithm and manual gating performance. In parallel, cells sorted into clusters on the basis of shared marker identity were analyzed to compare their abundance between exposure groups using existing Bioconductor workflows. This mixed approach allowed us to examine the immune response across timepoints, treatment conditions and exposure groups, enabling an exhaustive, comprehensive and scalable characterization of individual heterogeneity. 
+
 ## Cyto 2025 - Autofluorescence - P267
 
 **"Are these autofluorescences in the room with us right now?” Quantifying impact of autofluorescence variation on unmixing**
